# benchmark

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
agent_ergonomics_audit/: README.md  phase0_skill_inventory.json
agent_ergonomics_audit/audit/: HANDOFF.md  agent_surfaces.jsonl  ambition_bar_check.md  applied_changes.jsonl  manifest.json  playbook.md  recommendations.jsonl  scorecard_pass_1.md  surface_inventory.jsonl
agent_ergonomics_audit/audit/regression_tests/: R-001__bare_invocation_entrypoints.test.sh  R-002__top_level_robot_triage.test.sh  R-003__capabilities_alias.test.sh  R-004__robot_docs_guide.test.sh  R-005__error_breadcrumbs.test.sh  R-006__homebrew_formula_generator.test.sh
docs/: PLAN_BENCHMARK.md
scripts/: ubs_gate.sh
src/: assertions.rs  candidate.rs  cli.rs  compare.rs  doctor.rs  engine.rs  key_check.rs  lib.rs  lock_check.rs  main.rs  paths.rs  refusal.rs  render.rs  report.rs
tests/: cli.rs  doctor.rs  lock_integration.rs  perf_smoke.rs  refusals.rs  scoring_matrix.rs
tests/fixtures/: README.md
tests/fixtures/assertions/refusal/: bench_bad_tolerance.jsonl  bench_u001_malformed.jsonl
tests/fixtures/assertions/smoke/: bench_all_skip_gold.jsonl  bench_i001_gold.jsonl  bench_mixed_gold.jsonl
tests/fixtures/candidates/refusal/: bench_duplicate_key.csv  bench_i004_nested.json  bench_no_comp_id.csv  bench_null_key.csv
tests/fixtures/expected/: README.md  bench_all_skip.json  bench_mixed_fail.json
tests/fixtures/perf/: README.md  generate_perf_smoke.sh
(+8 files in other folders)
